--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,6 +84,9 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
+              <li class="nav-item">
+                <a class="nav-link" href="/assets/pdf/Huang_Jin_Resume.pdf">Resume </a>
+              </li>
               {%- if site.enable_darkmode %}
 
               <!-- Toogle theme mode -->
