--- a/_includes/header.html
+++ b/_includes/header.html
@@ -85,7 +85,7 @@
               {%- endif -%}
               {% endfor -%}
               <li class="nav-item">
-                <a class="nav-link" href="/assets/pdf/Huang_Jin_Resume.pdf">Resume </a>
+                <a class="nav-link" href="/assets/pdf/Huang_Jin_Resume.pdf">CV </a>
               </li>
               {%- if site.enable_darkmode %}
 
