--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,5 +35,21 @@
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
     {% include scripts/progressBar.html %}
+
+      <!-- Statcounter tracking code -->
+<script type="text/javascript">
+  var sc_project=13049407; 
+  var sc_invisible=1; 
+  var sc_security="6f2045b1"; 
+  </script>
+  <script type="text/javascript"
+  src="https://www.statcounter.com/counter/counter.js" async></script>
+  <noscript><div class="statcounter"><a title="Web Analytics"
+  href="https://statcounter.com/" target="_blank"><img class="statcounter"
+  src="https://c.statcounter.com/13049407/0/6f2045b1/1/" alt="Web Analytics"
+  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+
+  <!-- End of Statcounter Code -->
+   
   </body>
 </html>
