--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -114,19 +114,22 @@
     {% include scripts/analytics.html %}
     {% include scripts/progressBar.html %}
 
-  <!-- Statcounter tracking code -->
+  <!-- Default Statcounter code for homepage
+https://jn-huang.github.io -->
 <script type="text/javascript">
-  var sc_project=13049407; 
+  var sc_project=13050946; 
   var sc_invisible=1; 
-  var sc_security="6f2045b1"; 
+  var sc_security="3a80fd4f"; 
   </script>
   <script type="text/javascript"
-  src="https://www.statcounter.com/counter/counter.js" async></script>
+  src="https://www.statcounter.com/counter/counter.js"
+  async></script>
   <noscript><div class="statcounter"><a title="Web Analytics"
-  href="https://statcounter.com/" target="_blank"><img class="statcounter"
-  src="https://c.statcounter.com/13049407/0/6f2045b1/1/" alt="Web Analytics"
+  href="https://statcounter.com/" target="_blank"><img
+  class="statcounter"
+  src="https://c.statcounter.com/13050946/0/3a80fd4f/1/"
+  alt="Web Analytics"
   referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-
   <!-- End of Statcounter Code -->
   
   </body>
