--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,9 +84,9 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="/assets/pdf/CV_JIN_HUANG.pdf">CV </a>
-              </li>
+              </li> -->
               {%- if site.enable_darkmode %}
 
               <!-- Toogle theme mode -->
